@@ -1,5 +1,11 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 03/03/2014 ==
+demonstar55: Implemented deadly strikes and gave rogues higher innate throwing crit chance
+
+New rules: Combat:RogueCritThrowingChance, Combat:RogueDeadlyStrikeChance, Combat:RogueDeadlyStrikeMod
+	Defaults should give fairly close to live results
+
 == 03/02/2014 ==
 Kayen: Revision to charm code to be consistent with live based on extensive personal parsing.
 *Charisma ONLY effects the initial resist check when charm is cast with 10 CHA = -1 Resist mod up to 200 CHA
